# vibevoice-coreml

./: .gitignore  Package.resolved  Package.swift  README.md
Sources/VibeVoiceCoreML/: HubDownloader.swift  MultispeakerTTS.swift  RealtimeTTS.swift  SpeechToText.swift
Sources/VibeVoiceCoreML/Internal/: Constants.swift  CoreMLHelpers.swift  DPMSolver.swift  DataLoader.swift  ModelSet.swift  NumpyRNG.swift  RoPE.swift  TokenizerLoader.swift
Sources/vibevoice-cli/: main.swift
models/asr/vibevoice-asr-hf/coreml/: README.md  convert_coreml.py  convert_stateful_lm.py  pyproject.toml  traceable_modules.py
models/tts/vibevoice-1.5b/coreml/: README.md  convert_coreml.py  convert_stateful_lm.py  pyproject.toml  traceable_modules.py
models/tts/vibevoice-7b/coreml/: convert_coreml.py  convert_stateful_lm.py  pyproject.toml  traceable_modules.py
models/tts/vibevoice-realtime-0.5b/coreml/: README.md  convert_coreml.py  convert_stateful_lm.py  pyproject.toml  traceable_modules.py
python/: build_hf_repos.py
python/cli/: pyproject.toml  vibevoice_cli.py
python/common/: convert_common.py  traceable_common.py
python/stt/: README.md  pyproject.toml
python/stt/convert/: convert_all.py  convert_coreml.py  convert_stateful_lm.py
python/stt/run/: e2e_pipeline.py  pipeline_common.py  pipeline_coreml.py  pipeline_mlx.py  pipeline_pytorch.py
python/tts/common/: bench_mlx_common.py  diffusion.py  rope.py  verify_common.py
python/tts/vibevoice-multispeaker/: README.md  pyproject.toml
python/tts/vibevoice-multispeaker/convert/: convert_all.py  convert_coreml.py  convert_stateful_lm.py  convert_streaming_semantic.py  traceable_modules.py
python/tts/vibevoice-multispeaker/run/: e2e_pipeline.py  pipeline_common.py  pipeline_coreml.py  pipeline_mlx.py  pipeline_pytorch.py
python/tts/vibevoice-multispeaker/verify/: verify.py  verify_coreml.py  verify_mlx.py
python/tts/vibevoice-realtime-0.5b/: pyproject.toml
python/tts/vibevoice-realtime-0.5b/convert/: convert_all.py  convert_coreml.py  convert_stateful_lm.py  convert_voices.py  traceable_modules.py
python/tts/vibevoice-realtime-0.5b/run/: e2e_pipeline.py  pipeline_common.py  pipeline_coreml.py  pipeline_mlx.py  pipeline_pytorch.py
python/tts/vibevoice-realtime-0.5b/verify/: bench_mlx.py  verify.py
