[project]
name = "vibevoice-cli"
version = "0.1.0"
description = "Python CLI for VibeVoice CoreML models — TTS and ASR inference"
requires-python = ">=3.10"
dependencies = [
    "coremltools>=8.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "huggingface-hub>=0.25.0",
    "transformers>=4.45.0",
    "scipy>=1.5.0",
]

[project.scripts]
vibevoice-cli = "vibevoice_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["vibevoice_cli.py"]
