[project]
name = "vibevoice-asr-hf-coreml"
version = "0.1.0"
description = "CoreML export for microsoft/VibeVoice-ASR-HF speech recognition"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "coremltools==8.1",
    "numpy==1.26.4",
    "soundfile==0.13.1",
    "torch==2.5.1",
    "typer==0.16.0",
    "transformers>=5.3.0",
    "huggingface-hub>=0.25.2",
    "safetensors>=0.4.0",
    "scipy>=1.5.0",
]

[project.scripts]
vibevoice-asr-coreml = "convert_coreml:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "convert_coreml.py",
    "traceable_*.py",
    "README.md",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
